<resources>
    <string name="app_name">DarijaGenie</string>
    <string name="translating">Translating…</string>
    <string name="instruction_translate">Enter text to translate:</string>
    <string name="hint_type_here">Type here…</string>
    <string name="label_from">From:</string>
    <string name="default_from_lang">en</string>
    <string name="label_to">To:</string>
    <string name="default_to_lang">darija</string>
    <string name="button_translate">Translate</string>
    <string name="translation_placeholder">Translate something!</string>
    <string name="signup_title">Create Account</string>
    <string name="signup_subtitle">Sign up to start translating</string>
    <string name="login_title">Translation App</string>
    <string name="login_subtitle">Login to continue</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign Up</string>
    <string name="link_signup">Don\'t have an account? Sign up</string>
    <string name="link_login">Already have an account? Login</string>
    <string name="history_title">Translation History</string>
    <string name="history_empty">No translation history yet</string>
    <string name="history_empty_subtitle">Your translations will appear here</string>
    <string name="button_clear_history">Clear All</string>
    <string name="recent_translations">Recent Translations</string>
</resources>